# evadia-code

./: .gitignore  pyproject.toml  requirements.txt
scripts/: download_pipeline.py  run_pipeline.py
src/evadia/splitters/: __init__.py  base.py  basic.py  basic2.py  fixed_length.py  hugging_face.py  ollama.py
